--- a/gradle.properties
+++ b/gradle.properties
@@ -3,11 +3,11 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 # check these on https://fabricmc.net/use
-minecraft_version=1.17.1
-yarn_mappings=31
-loader_version=0.11.6
+minecraft_version=21w42a
+yarn_mappings=4
+loader_version=0.12.3
 # currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric-api/fabric-api
-fabric_api_version=0.37.1+1.17
+fabric_api_version=0.41.1+1.18
 
 # Mod Properties
 mod_version = 2.0.2
@@ -17,5 +17,5 @@ modrinth_id=yBW8D80W
 
 # Dependencies
 # currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric-api/fabric-api
-spruceui_version=3.2.0+1.17
-modmenu_version=2.0.4
+spruceui_version=3.3.0+21w42a
+modmenu_version=3.0.0
